# WhisperDesk

./: .gitignore  .gitmodules  BYPASS_APPROACH_COMPLETE.md  FRONTEND_ARCHITECTURE_UPDATE.md  MIGRATION_SUMMARY.md  Makefile  OBJC2_INTEGRATION_GUIDE.md  PHASE3_IMPLEMENTATION_COMPLETE.md  PLATFORM_GUIDE.md  PROJECT_SUMMARY.md  README.md  README_ENHANCED.md  REPOSITORY_CONTENTS.md  SCREENCAPTUREKIT_IMPLEMENTATION_STATUS.md  SCREENCAPTUREKIT_NEXT_STEPS.md  SCREENCAPTUREKIT_SEGFAULT_SOLUTION.md  SCREEN_RECORDER_MIGRATION.md  SETUP.md  SETUP_MACOS.md  SETUP_WINDOWS.md  build_documentation.md  build_whisper.sh  complete_fix_script.sh  create-dmg-background.py  create-resources.sh  debug_whisper.sh  diagnostic.js  download-tiny-model.js  download_model.sh  eslint.config.js  fix-whisperdesk.sh  fix_whisper_binary.sh  package-lock.json  package.json  quick_fix_script.sh  quick_provider_setup.sh  quick_test_script.sh  readme.md  real_transcribe.py  requirements.txt  (+18 more)
.github/: CLEANUP_COMPLETE.md  FINAL_VALIDATION.md  MIGRATION.md  NEXT_STEPS.md  README.md  RESTRUCTURE_COMPLETE.md
.github/actions/build-diarization/: action.yml
.github/actions/build-whisper/: action.yml
.github/actions/setup-build-env/: action.yml
.github/actions/verify-build/: action.yml
.github/scripts/: build-diarization.sh  build-whisper.sh  rename-portable.js  sign-windows.js
.github/workflows/: build.yml  generate-icons.yml  main.yml  release.yml  test.yml
.github/workflows/reusable/: build-platform.yml  setup-signing.yml
Install Package/: PACKAGE_README.md  install.sh  package-lock.json
Test Scripts/: debug_fix_script.sh  local_build_script.sh  mac_transcription_fix_script.sh
binaries/: whisper  whisper-cli  whisper-cli.backup-1748977294798
docs/: automated_release_system.md  deprecated_files.md  development_guide.md  project_structure.md
native/: build-universal.sh  build.sh
native/src/: CMakeLists.txt
native/whisperdesk-screencapturekit/: Cargo.toml  index.d.ts  index.js  package-lock.json  package.json  whisperdesk-screencapturekit.darwin-arm64.node
native/whisperdesk-screencapturekit/src/: lib.rs
native/whisperdesk-screencapturekit/src/screencapturekit/: audio.rs  bindings.rs  content.rs  delegate.rs  encoder.rs  mod.rs  stream.rs
resources/: entitlements.mac.plist  installer.nsh
resources/icons/: icon.icns
resources/macos/: icon.icns
scripts/: aperture-recorder-esm.js  build-diarization.js  build-diarization.sh  build-macos.sh  build-whisper-cross-platform.js  build-whisper-official.js  build-whisper.js  build-whisper.ps1  build-whisper.sh  build.bat  build.sh  build_all.sh  check-aperture-requirements.js  check-diarization.js  compile-whisper-windows.ps1  diagnostic-screencapturekit.js  download-binaries.js  download-models.js  download-onnx-models.js  enhanced-diarization-builder.js  fix-whisper-dependencies.js  rename-portable.js  run-build.js  setup-check.js  setup-diarization.js  setup-ffmpeg.js  setup-platform-specific.js  setup.js  sign-macos.js  test-aperture-audio.js  test-aperture-dynamic.js  test-aperture-esm.js  test-aperture-recording.js  test-aperture-v7-correct.js  test-async-screencapturekit.js  test-available-methods.js  test-bypass-recording.js  test-ffmpeg.js  test-full-recording.js  test-objc2-screencapturekit-full.js  (+16 more)
scripts/Icon generation/: generate_icons.sh
scripts/builders/: cli-builder.js
src/main/: index.js  main-debug.js  main-simplified.js  main.js  preload-enhanced.js  preload.js
src/main/ipc-handlers/: app-handlers.js  basic-handlers.js  export-handlers.js  file-handlers.js  model-handlers.js  screen-recorder-handlers.js  settings-handlers.js  speaker-handlers.js  transcription-handlers.js
src/main/managers/: ipc-manager.js  service-manager.js  store-manager.js  window-manager.js
src/main/screen-recorder/: README-new.md  README.md  ScreenRecorderService.js  index.js
src/main/screen-recorder/caprecorder/: CapRecorderHandlers.js  CapRecorderService.js  README.md  examples.js  index.js
src/main/screen-recorder/core/: BrowserFallbackRecorder.js  EnhancedScreenRecorderEngine.js  MacOSNativeRecorder.js  PlatformAwareScreenRecorderService.js  PlatformRecordingRouter.js  ScreenRecorderEngine.js
src/main/screen-recorder/handlers/: ScreenRecorderHandlers.js
src/main/screen-recorder/managers/: DeviceManager.js  FileManager.js
src/main/screen-recorder/recorders/: LinuxHybridRecorder.js  MacOSScreenCaptureRecorder.js  Objc2ScreenCaptureRecorder.js  ScreenCaptureKitNodeRecorder.js  WindowsHybridRecorder.js
src/main/screen-recorder/services/: CPALMicrophone.js  FFmpegMerger.js
src/main/screen-recorder/types/: index.js
src/main/services/: aperture-recorder.js  audio-service.js  binary-manager-dll.js  binary-manager.js  device-manager.js  diarization-binary-manager.js  diarization-models-config.js  diarization-service.js  enhanced-transcription-service.js  export-service.js  model-manager.js  models-config.js  screen-recorder.js  settings-service.js  settings-store.js  speaker-recognition-service.js  transcription-service-enhanced.js  transcription-service-native.js  transcription-service.js  transcription-store.js  whisper-service.js
src/main/services/legacy-backup/: screen-recorder-handlers.js
src/main/utils/: exec-utils.js  system-audio-helper.js
src/native/diarization/: CMakeLists.txt  diarize-cli.cpp  speaker-embedder.cpp  speaker-segmenter.cpp  utils.cpp
src/native/diarization/include/: utils.h
src/preload/: index.js
src/renderer/: index.html  renderer.js  styles.css
src/renderer/components/: EnhancedScreenRecorder.jsx
src/renderer/whisperdesk-ui/: index.html  jsconfig.json  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.js
test-output/: scstream-patterns-report.json
tools/icon-generation/: generate_icons.sh
tools/setup/: build-whisper-official.js  build-whisper.sh  check-dependencies.js  compile-whisper-windows.ps1  download-models.js  setup-check.js  setup.ps1  setup.sh
tools/testing/: test-binary.js
tools/testing/audio/: harvard.wav.vtt  test.mp3.vtt
(+99 files in other folders)
