[package]
name = "whisperdesk-screencapturekit"
version = "0.1.0"
edition = "2021"

[lib]
name = "whisperdesk_screencapturekit"
crate-type = ["cdylib"]

[dependencies]
# Node.js native module support
napi = { version = "2.0", features = ["napi8"] }
napi-derive = "2.0"

# Error handling and serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
napi-build = "2.0"

[profile.release]
lto = true
codegen-units = 1

[package.metadata.napi]
name = "whisperdesk-screencapturekit" 