[package]
name = "whisperdesk-screencapturekit"
version = "0.1.0"
edition = "2021"

[lib]
name = "whisperdesk_screencapturekit"
crate-type = ["cdylib"]

[dependencies]
# Node.js native module support
napi = { version = "2.0", features = ["napi8"] }
napi-derive = "2.0"

# Error handling and serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# objc2 ScreenCaptureKit bindings
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-core-media = "0.3"
objc2-core-video = "0.3"
objc2-av-foundation = "0.3"

# Foundation implementation dependencies
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
log = "0.4"
env_logger = "0.10"

[build-dependencies]
napi-build = "2.0"

[profile.release]
lto = true
codegen-units = 1

[package.metadata.napi]
name = "whisperdesk-screencapturekit" 